ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/CnP_PaaS__Sub_Recordtypes__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Sub Recordtypes</label>
    <nameField>
        <label>Sub Recordtypes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Sub Recordtypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>