ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__C_P_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Record_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Record Type</label>
    <referenceTo>CnP_PaaS__Record_Types__c</referenceTo>
    <relationshipName>Sub_Recordtypes</relationshipName>
    <type>Lookup</type>
</CustomField>