ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Sub_Recordtypes</relationshipName>
    <type>Lookup</type>
</CustomField>