ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Ledger__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Ledger__c</fullName>
    <label>Ledger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>