ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Opportunity_Allocation__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Allocation</label>
    <type>Checkbox</type>
</CustomField>