ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Opportunity_SKU_Condition__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity_SKU_Condition__c</fullName>
    <label>Opportunity SKU Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>