ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Percentage_amount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Percentage_amount__c</fullName>
    <label>Percentage amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>