ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Sub_Recordtypes__c/fields/CnP_PaaS__Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sub_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Class</label>
    <referenceTo>CnP_PaaS__Sub_Class__c</referenceTo>
    <relationshipName>Sub_Recordtypes</relationshipName>
    <type>Lookup</type>
</CustomField>